--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fascinate&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap");
+
 /*
  * [Modified] Modern CSS Reset
  * @link https://github.com/hankchizljaw/modern-css-reset
 */
-@import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fascinate&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap");
 /* Box sizing rules */
 *,
 *::before,
@@ -45,7 +46,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 950px) {
   #main {
     margin: 20%;
   }
@@ -56,12 +57,12 @@ body {
     margin: auto;
   }
 
-  nav {
+  nav{
     position: absolute !important;
   }
 
   h2 {
-    line-height: 1em;
+    line-height: 1;
   }
 
   footer.page-footer div {
@@ -95,7 +96,7 @@ header {
   text-align: center;
   place-items: center;
   font-family: "Amatic SC", cursive;
-  background: rgb(202, 238, 174);
+  background: rgb(131, 143, 122);
   background: radial-gradient(
     circle,
     rgba(202, 238, 174, 1) 0%,
@@ -105,9 +106,25 @@ header {
 
 h1 {
   font-family: "Fascinate", cursive;
-  color: rgb(126, 189, 118);
+  color: rgb(33, 112, 21);
   font-size: 5em;
 }
+
+header h2{
+  color:rgb(99, 28, 28);
+  font-weight: bold;
+}
+
+header p{
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+header a{
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
 
 a[class="link-github"] {
   display: inline-block;
@@ -144,12 +161,12 @@ nav li:hover {
 }
 
 nav ul > li {
-  background-color: rgba(201, 117, 117, 0.781);
+  background-color: rgba(202, 107, 107, 0.774);
   border: 0.5px solid white;
   border-radius: 5px;
   padding-left: 1%;
   padding-right: 1%;
-  width: max-content;
+  width: 90px;
   margin-bottom: 10px;
 }
 
@@ -158,9 +175,14 @@ nav a {
   text-decoration: none;
 }
 
+
+a{
+  color:rgb(51, 82, 41);
+}
+
 #main {
   font-family: "Cairo", sans-serif;
-  font-size: 1.3em;
+  font-size:1.4em;
 }
 
 article#about {
@@ -184,7 +206,7 @@ section.container {
   max-width: 75ch;
   margin: auto;
   font-size: 0.8em;
-  line-height: 2em;
+  line-height: 2;
 }
 
 blockquote {
@@ -200,12 +222,12 @@ section ul {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   row-gap: 0.5em;
   column-gap: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.63);
+  border: 1px solid rgba(216, 77, 77, 0.63);
   padding: 10px;
   margin: auto;
   font-family: "Amatic SC", cursive;
   font-size: 1.3em;
-  color: rgb(141, 182, 141);
+  color: rgb(91, 117, 91);
   font-weight: bold;
   list-style-type: none;
 }
@@ -219,7 +241,7 @@ h2,
 h3 {
   font-family: "Amatic SC", cursive;
   font-size: 2em;
-  color: rgba(201, 117, 117, 0.781);
+  color: rgba(196, 44, 52, 0.781);
 }
 
 section.container {
@@ -276,12 +298,16 @@ a.link-codepen {
 h4#profile-title {
   font-family: "Amatic SC", cursive;
   font-size: 2em;
+  font-weight: bold;
   color: rgba(0, 0, 0, 0.781);
+  background-color: #ffffff;
+  opacity: 0.6;
 }
 
 aside.profile div {
   font-size: 0.8em;
   font-weight: 400;
+  text-align: center;
   border-radius: 10px;
   width: 50%;
   margin: auto;
@@ -290,7 +316,7 @@ aside.profile div {
 }
 
 aside.profile ul {
-  margin: 30px;
+  margin: auto;
   background-color: #ffffff;
   opacity: 0.6;
 }
@@ -306,6 +332,8 @@ ul.features {
   grid-gap: 4em;
   font-size: 0.8em;
   padding: 1rem;
+  margin-left: 10%;
+  margin-right: 10%;
 
 }
 
@@ -314,6 +342,10 @@ ul.features li {
   background-color: rgba(111, 177, 111, 0.623);
   margin: auto;
   padding: 50px; 
+}
+
+.link-allstyles{
+  font-size: 1rem;
 }
 
 footer,
