--- a/style.css
+++ b/style.css
@@ -51,18 +51,27 @@ body {
     margin: 20%;
   }
 
-  h1{
-    max-width: 4ch;
+  h1 {
+    max-width: fit-content;
+    padding: 2px;
     text-align: center;
     margin: auto;
   }
 
-  nav{
+  nav {
     position: absolute !important;
   }
 
   h2 {
     line-height: 1;
+  }
+
+  a.link-downloadhtml {
+    margin-top: 20px !important;
+  }
+
+  a.link-codepen {
+    margin-top: 20px !important;
   }
 
   footer.page-footer div {
@@ -71,6 +80,22 @@ body {
 
   footer a {
     width: 100%;
+  }
+}
+
+@media only screen and (min-width: 950px) {
+  nav {
+    position: fixed;
+    top: 10px;
+    left: 30px;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: column !important;
+    font-family: "Amatic SC", cursive;
+    font-size: 1.3em;
+    list-style-type: none;
   }
 }
 
@@ -108,23 +133,23 @@ h1 {
   font-family: "Fascinate", cursive;
   color: rgb(33, 112, 21);
   font-size: 5em;
+  text-align: center;
 }
 
-header h2{
-  color:rgb(99, 28, 28);
+header h2 {
+  color: rgb(0, 0, 0);
   font-weight: bold;
 }
 
-header p{
+header p {
   font-size: 1.5rem;
   font-weight: bold;
 }
 
-header a{
+header a {
   font-size: 1.3rem;
   font-weight: bold;
 }
-
 
 a[class="link-github"] {
   display: inline-block;
@@ -137,18 +162,17 @@ svg {
   fill: rgb(126, 189, 118);
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
 nav ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  place-items: center;
   font-family: "Amatic SC", cursive;
   font-size: 1.3em;
   list-style-type: none;
+  margin-top: 10px;
+  padding-left: 0;
 }
 
 ul {
@@ -164,8 +188,9 @@ nav ul > li {
   background-color: rgba(202, 107, 107, 0.774);
   border: 0.5px solid white;
   border-radius: 5px;
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  text-align: center;
   width: 90px;
   margin-bottom: 10px;
 }
@@ -175,14 +200,13 @@ nav a {
   text-decoration: none;
 }
 
-
-a{
-  color:rgb(51, 82, 41);
+a {
+  color: rgb(51, 82, 41);
 }
 
 #main {
   font-family: "Cairo", sans-serif;
-  font-size:1.4em;
+  font-size: 1.4em;
 }
 
 article#about {
@@ -194,10 +218,12 @@ section > h2 {
   font-family: "Amatic SC", cursive;
   font-size: 3em;
   font-weight: bold;
+  line-height: 1em;
 }
 
 article {
   margin-bottom: 2em;
+  margin-top: 3em;
 }
 
 section.container {
@@ -207,6 +233,7 @@ section.container {
   margin: auto;
   font-size: 0.8em;
   line-height: 2;
+  margin-bottom: 3.5rem;
 }
 
 blockquote {
@@ -222,19 +249,17 @@ section ul {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   row-gap: 0.5em;
   column-gap: 1em;
-  border: 1px solid rgba(216, 77, 77, 0.63);
-  padding: 10px;
+  border: 20px solid transparent;
+  border-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.QVi9xfgsXgazsvwowgjqPgHaHa%26pid%3DApi&f=1)
+    40 round;
+  padding: 40px;
   margin: auto;
   font-family: "Amatic SC", cursive;
   font-size: 1.3em;
+  text-align: center;
   color: rgb(91, 117, 91);
   font-weight: bold;
   list-style-type: none;
-}
-
-h4 {
-  font-family: "Amatic SC", cursive;
-  font-size: 2.5 em;
 }
 
 h2,
@@ -244,12 +269,27 @@ h3 {
   color: rgba(196, 44, 52, 0.781);
 }
 
-section.container {
-  margin-bottom: 3rem;
+h4 {
+  font-family: "Amatic SC", cursive;
+  font-size: 2.5 em;
+}
+
+#contribute section.container {
+  margin-bottom: 0.5rem;
+}
+
+section.container ol {
+  border: 7px solid rgb(111, 151, 111);
+  box-shadow: 12px 12px 2px 1px rgba(201, 117, 117, 0.781);
+  padding: 30px 60px;
+}
+
+footer#files div {
+  margin-top: 5rem;
 }
 
 #files h3 {
-  margin-bottom: 0.3em;
+  margin-bottom: 0.5em;
 }
 
 a.link-downloadcss {
@@ -311,19 +351,43 @@ aside.profile div {
   border-radius: 10px;
   width: 50%;
   margin: auto;
+  margin-top: 100px;
   padding: 3%;
+  height: 500px;
   background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F01.img.society6.com%2Fsociety6%2Fimg%2F6DCagBzOAPegFgqQ_2t8iKfr_PU%2Fw_700%2Fartwork%2F~artwork%2Fs6-0068%2Fa%2F27832664_4390339%2F~~%2Fwatermelon-pattern-vw4-prints.jpg&f=1&nofb=1);
 }
 
 aside.profile ul {
-  margin: auto;
   background-color: #ffffff;
   opacity: 0.6;
+  text-align: center;
+  font-size: 1.3em;
+  line-height: 50px;
+  margin-top: 50px;
+  padding-left: 0px;
 }
 
 aside#styles div {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+aside h2 {
+  font-weight: bold;
+  font-size: 2.5em;
+}
+
+aside#styles div {
+  margin-top: 50px;
+}
+
+aside.profile div {
+  margin-top: 60px;
+}
+
+h4#profile-title {
+  font-weight: bold;
+  font-size: 3rem;
 }
 
 ul.features {
@@ -334,18 +398,18 @@ ul.features {
   padding: 1rem;
   margin-left: 10%;
   margin-right: 10%;
-
+  margin-top: 50px;
 }
 
 ul.features li {
   border-radius: 10px;
   background-color: rgba(111, 177, 111, 0.623);
   margin: auto;
-  padding: 50px; 
+  padding: 50px;
 }
 
-.link-allstyles{
-  font-size: 1rem;
+.link-allstyles {
+  font-size: 1.4rem;
 }
 
 footer,
@@ -361,3 +425,4 @@ aside {
   font-size: 1.2em;
   font-weight: bold;
 }
+
